# kata

./: .gitignore  Dockerfile  Makefile.am  README.md  configure.ac  cpputest-3.8-0.x86_64.rpm  install-dependencies.sh
src/: Makefile.am
src/kata/: Console.cpp  Console.hpp  Makefile.am  kata.cpp
src/kata/test/: Console_test.cpp
src/lib-core/: .gitignore  Core.cpp  Core.hpp  Makefile.am  Object.hpp  Post.cpp  Post.hpp  TimeAgo.cpp  TimeAgo.hpp  User.cpp  User.hpp  Wall.cpp  Wall.hpp  kata.sql  kata.xml
src/lib-core/test/: AllTests.cpp  Core_test.cpp  Post_test.cpp  TimeAgo_test.cpp  User_test.cpp
src/lib-parser/: .gitignore  Makefile.am  Phrase.cpp  Phrase.hpp
src/lib-parser/test/: AllTests.cpp  Phrase_test.cpp
